--- a/learning-module-9/templates/test.html
+++ b/learning-module-9/templates/test.html
@@ -1,35 +1,18 @@
 <!DOCTYPE html>
-<html>
-    
-    <body>
-        <form>
-            <label for="name">Ім’я: </label>
-            <input type="text" id="name" name="name"><br>
-          
-            <p>Стать:</p>
-            <label for="female">Жінка</label>
-            <input type="radio" id="female" name="gender" value="female"><br>
-          
-            <label for="male">Чоловік</label>
-            <input type="radio" id="male" name="gender" value="male"><br>
-          
-            <p>Хобі:</p>
-            <label for="Спорт">Спорт</label>
-            <input type="checkbox" id="sport" name="interests" value="sport"><br>
-          
-            <label for="Спорт">Книжки</label>
-            <input type="checkbox" id="books" name="interests" value="books"><br>
-            <label for="graal">Св. Ґрааль </label>
-            <input type="checkbox" id="graal" name="interests" value="graal"><br>
-            <label for="shrubber">Кущі</label>
-            <input type="checkbox" id="shrubber" name="interests" value="shrubber"><br>
-          
-            <p>Опис</p>
-            <label for="description">Опис</label>
-            <textarea cols=80 rows=4 type="textbox" id="description" name="description" placeholder="Опис..."></textarea><br>
-          
-            <input type="submit" value="send">
-          </form>
-    </body>
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Вхід</title>
+</head>
+<body>
+ <form>
+ <div class="container">
+  <label for="username"><b>Username</b></label>
+  <input type="text" placeholder="Enter Username" name="username" required>
+  <label for="password"><b>Password</b></label>
+  <input type="password" placeholder="Enter Password" name="password" required>
+  <button type="submit">Login</button>
+ </div>
+</form>
+</body>
 </html>
