--- a/Currency/templates/rates.html
+++ b/Currency/templates/rates.html
@@ -27,7 +27,7 @@
   <br><br>
 
   <label for="amount">Choose amount of currency to buy :</label>
-  <input type="number" id="number" name="number"><br><br>
+  <input type="number" id="number" name="amount"><br><br>
   <input type="submit" value="Submit">
 
 </form>
