--- a/Currency/templates/index.html
+++ b/Currency/templates/index.html
@@ -6,7 +6,8 @@
 
 
 <form action="/"action_page.php>
-  <label for="code">Choose a currency code:</label>
+  <link rel="stylesheet" href="./style-1.css">
+  <label for="code" class="first">Choose a currency code:</label>
   <select name="code" id="code">
     <option value="USD">USD</option>
     <option value="AUD">AUD</option>
