--- a/Currency/templates/index.html
+++ b/Currency/templates/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+
 <body>
 
-<h1>Currency calculator</h1>
-
-
+<h1 class="first">Currency calculator</h1>
 <form action="/"action_page.php>
-  <link rel="stylesheet" href="./style-1.css">
-  <label for="code" class="first">Choose a currency code:</label>
+  
+  <label for="code" >Choose a currency code:</label>
   <select name="code" id="code">
     <option value="USD">USD</option>
     <option value="AUD">AUD</option>
