--- a/learning-module-9/templates/lib.html
+++ b/learning-module-9/templates/lib.html
@@ -7,8 +7,9 @@
 
 <body>
 
-  <form>
-    
+  <form  method="post" enctype=multipart/form-data>
+   
+  
     <label for="title">Book title</label>
     <input type="text" id="title" name="title"><br><br>
 
@@ -27,7 +28,7 @@
       </li>
     </ul>
 
-    <method="post" enctype=multipart/form-data>
+  
     <label for="img">Cover image</label>
     <input type="file" name="file">
     <input type="submit" value="upload"><br><br>
