--- a/Currency/templates/index.html
+++ b/Currency/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <link rel="stylesheet" href="href= {{ url_for('static',filename='style.css') }}">
+  <link rel="stylesheet" href="href= {{ url_for('static',filename='static/style.css') }}">
 
 </head>
 
@@ -24,6 +24,12 @@
   <label for="amount">Choose amount of currency to buy :</label>
   <input type="number" id="number" name="amount"><br><br>
   <input type="submit" value="Submit">
+  
+
+  {% if amount %}
+  <div> {{ amount  }}</div>
+  {% endif %}
+
 
 </form>
 
