--- a/Currency/templates/index.html
+++ b/Currency/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-  <link rel="stylesheet" href="href= {{ url_for('static',filename='static/style.css') }}">
-
+  <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+  
 </head>
 
 <body>
